--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "CI='' npm run build"
   publish = "build"
 
 # Regola per gestire il routing SPA (Single Page Application)
